--- a/src/template.html
+++ b/src/template.html
@@ -8,6 +8,7 @@
 	%sapper.base%
 
 	<link rel='stylesheet' href='global.css'>
+	<link href="https://fonts.googleapis.com/css?family=Heebo|Montserrat&display=swap" rel="stylesheet">
 	<link rel='manifest' href='manifest.json'>
 	<link rel='icon' type='image/png' href='favicon.png'>
 
